Додав вікно Користувачі

--- a/Librarian/Librarian/Librarian.vcxproj.filters
+++ b/Librarian/Librarian/Librarian.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="MyForm.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Users.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -48,6 +51,9 @@
     </ClCompile>
     <ClCompile Include="MyForm.cpp">
       <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Users.cpp">
+      <Filter>Headerdateien</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
