Links between forms

--- a/Librarian/Librarian/Librarian.vcxproj.filters
+++ b/Librarian/Librarian/Librarian.vcxproj.filters
@@ -53,7 +53,7 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Users.cpp">
-      <Filter>Headerdateien</Filter>
+      <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
