--- a/Librarian/Librarian/Librarian.vcxproj.filters
+++ b/Librarian/Librarian/Librarian.vcxproj.filters
@@ -35,6 +35,12 @@
     <ClInclude Include="Users.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="WriteBook.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Creators.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -54,6 +60,12 @@
     </ClCompile>
     <ClCompile Include="Users.cpp">
       <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="WriteBook.cpp">
+      <Filter>Headerdateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Creators.cpp">
+      <Filter>Headerdateien</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
